Add migration banner

--- a/src/content/graphos/org/sso/self-service/availability.mdx
+++ b/src/content/graphos/org/sso/self-service/availability.mdx
@@ -3,12 +3,19 @@ title: Self-Service SSO Availability
 noIndex: true
 ---
 
-Self-service single sign-on (SSO) is only available for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
+Self-service single sign-on (SSO) is currently only available for organizations with Dedicated and Enterprise plans who previously set up their SSO using PingOne and need to migrate.
 To confirm if you can use self-service SSO, visit [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and check for an SSO migration banner.
 
-[To-do: Banner screenshot]
+<img
+  src="../../../img/sso/migration-banner.jpg"
+  alt="Migration banner in GraphOS Studio"
+  className="screenshot"
+  width="700"
+/>
 
-If you don't see this banner, you can't use the self-service setup and must use these instructions to set up your SSO:
+## Non self-service setup
+
+If you don't see the migration banner, you can't use the self-service setup and must use these instructions to set up your SSO:
 
 - [Okta (SAML-based)](../okta-integration-guide/)
 - Microsoft Entra ID (formerly known as Azure Active Directory)
