--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -11,7 +11,12 @@ GraphOS has a new self-service single sign-on (SSO) system. Enterprise organizat
 If your organization implemented SSO before April 2024, you must migrate.
 To confirm if you need to migrate, visit [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and check for an SSO migration banner.
 
-[To-do: Banner screenshot]
+<img
+  src="../../../img/sso/migration-banner.jpg"
+  alt="Migration banner in GraphOS Studio"
+  className="screenshot"
+  width="700"
+/>
 
 If you aren't sure whether you need to migrate, please reach out to your Apollo contact.
 
