Add Okta OIDC stub

--- a/src/content/graphos/org/sso/self-service/availability.mdx
+++ b/src/content/graphos/org/sso/self-service/availability.mdx
@@ -17,7 +17,9 @@ To confirm if you can use self-service SSO, visit [GraphOS Studio](https://studi
 
 If you don't see the migration banner, you can't use the self-service setup and must use these instructions to set up your SSO:
 
-- [Okta (SAML-based)](../okta-integration-guide/)
+- Okta
+- [SAML-based](../okta-integration-saml-guide/)
+- [OIDC-based](../okta-integration-oidc-guide/)
 - Microsoft Entra ID (formerly known as Azure Active Directory)
   - [SAML-based](../microsoft-entra-id-integration-saml-guide)
   - [OIDC-based](../microsoft-entra-id-integration-oidc-guide)
