--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -13,7 +13,10 @@ If you are setting up SSO for the first time, please refer to [these instruction
 </PremiumFeature>
 
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
-If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./microsoft-entra-id-integration-oidc-guide/).
+If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding guide for your IdP:
+
+- [Okta](./okta-oidc-integration-guide/)
+- [Microsoft Entra ID](./microsoft-entra-id-integration-oidc-guide/) (formerly known as Azure Active Directory)
 
 <SSOMigrationNotice />
 
