Make Setup steps generic to OIDC/SAML

--- a/src/content/graphos/org/sso/self-service/migration.mdx
+++ b/src/content/graphos/org/sso/self-service/migration.mdx
@@ -28,13 +28,16 @@ The new SSO implementation is now directly integrated into the GraphOS authentic
 
 To migrate, a GraphOS [Org Admin](../members/#organization-wide-member-roles) must create a new SSO configuration and remove the legacy configuration. For details, see the instructions for your identity provider:
 
-- Okta
-- [SAML-based](../okta-integration-saml-guide/)
-- [OIDC-based](../okta-integration-oidc-guide/)
-- Microsoft Entra ID (formerly known as Azure Active Directory)
-  - [SAML-based](../microsoft-entra-id-integration-saml-guide)
-  - [OIDC-based](../microsoft-entra-id-integration-oidc-guide)
-- [Generic SAML](../saml-integration-guide/)
-- [Generic OIDC](../oidc-integration-guide/)
+#### SAML-based
+
+- [Okta](./saml-okta)
+- [Microsoft Entra ID](./saml-microsoft-entra-id) (formerly known as Azure Active Directory)
+- [Generic SAML](./saml-integration-guide)
+
+#### OIDC-based
+
+- [Okta](./oidc-okta)
+- [Microsoft Entra ID](./oidc-microsoft-entra-id) (formerly known as Azure Active Directory)
+- [Generic OIDC](./oidc-integration-guide/)
 
 Don't hesitate to reach out to your Apollo contact email [support@apollographql.com](mailto:support@apollographql.com) if you have any questions or need assistance.
