--- a/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/self-service/oidc-integration-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: Set up SSO with an OIDC-based IdP
+title: Self-Service SSO with an OIDC-based IdP
 subtitle: Configure an OIDC-based identity provider
 description: Configure a OpenID Connect (OIDC) based identity provider as your Apollo GraphOS organization's SSO provider.
 ---
@@ -15,8 +15,8 @@ If you are setting up SSO for the first time, please refer to [these instruction
 This guide walks through configuring a generic OpenID Connect (OIDC) based identity provider (IdP) for use with Apollo SSO.
 If you use Okta or Microsoft Entra ID as your IdP, instead see the corresponding guide for your IdP:
 
-- [Okta](./okta-oidc-integration-guide/)
-- [Microsoft Entra ID](./microsoft-entra-id-integration-oidc-guide/) (formerly known as Azure Active Directory)
+- [Okta](./oidc-okta)
+- [Microsoft Entra ID](./oidc-microsoft-entra-id) (formerly known as Azure Active Directory)
 
 <SSOMigrationNotice />
 
