--- a/src/content/graphos/org/sso/self-service/saml-okta.mdx
+++ b/src/content/graphos/org/sso/self-service/saml-okta.mdx
@@ -1,12 +1,12 @@
 ---
-title: Set up SAML SSO with Okta
+title: Self-Service SAML SSO with Okta
 subtitle: Configure Okta as your GraphOS organization's identity provider
 description: Configure Okta as your Apollo GraphOS organization's SSO provider with this SAML setup guide.
 ---
 
 <PremiumFeature>
 
-Self-service single sign-on (SSO) is only available for organizations with Dedicated and Enterprise plans who set up SSO with PingOne and need to migrate.
+Self-service single sign-on (SSO) is only available for organizations with Dedicated and Enterprise plans who previously set up SSO with PingOne and need to migrate.
 If you're unsure if you need to migrate please see the [Migration Guide](./migration#who-needs-to-migrate).
 If you're setting up SSO for the first time, please refer to [these instructions](../okta-integration-guide).
 
@@ -18,7 +18,7 @@ This guide walks through configuring Okta as your GraphOS organization's identit
 
 ## Setup
 
-<SAMLSetupSteps idp="Okta app integration" />
+<SSOSetupSteps type="SAML" idp="Okta app integration" />
 
 ### Prerequisites
 
