DOC-196 add link

--- a/src/content/shared/graphos-router-features.mdx
+++ b/src/content/shared/graphos-router-features.mdx
@@ -11,4 +11,4 @@ The GraphOS Router supports a collection of premium features specific to GraphOS
 - Mitigation of potentially malicious requests via [operation limits](https://www.apollographql.com/docs/router/configuration/operation-limits),[demand control](https://www.apollographql.com/docs/router/executing-operations/demand-control), and [safelisting](https://www.apollographql.com/docs/graphos/operations/persisted-queries)
 - Custom instrumentation and telemetry, including [custom attributes for spans](https://www.apollographql.com/docs/router/configuration/telemetry/instrumentation/spans/#attributes).
 - An [offline Enterprise license](https://www.apollographql.com/docs/router/enterprise-features/#offline-enterprise-license) that enables running the router with Enterprise features when disconnected from the internet.
-- Using contexts to share data with the [`@context`](https://www.apollographql.com/docs/federation/federated-schemas/federated-directives#context) and [`@fromContext`](https://www.apollographql.com/docs/federation/federated-schemas/federated-directives#fromcontext) directives
+- [Using contexts to share data](https://www.apollographql.com/docs/federation/entities/use-contexts) with the [`@context`](https://www.apollographql.com/docs/federation/federated-schemas/federated-directives#context) and [`@fromContext`](https://www.apollographql.com/docs/federation/federated-schemas/federated-directives#fromcontext) directives
